syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.spruce.proto";
option java_outer_classname = "GatewayProto";

service Gateway {
  rpc CallService (CallServiceRequest) returns (CallServiceResponse);
  rpc EventStream (EventStreamRequest) returns (stream EventStreamResponse);
  rpc EmitEvent (EmitEventRequest) returns (google.protobuf.Empty);
}

message CallServiceRequest {
  string service = 1;
  string action = 2;
  string payload = 3;
}

message CallServiceResponse {
  string result = 1;
}

message EventStreamRequest {
  string serverId = 1;
}

message EventStreamResponse {
  string type = 1;
  string payload = 2;
}

message EmitEventRequest {
  string type = 1;
  string payload = 2;
}
